# logx

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.steering/20260308-format-detection/: design.md  requirements.md  tasklist.md
.steering/20260309-error-extraction/: design.md  requirements.md  tasklist.md
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
src/: analyzer.rs  cli.rs  detector.rs  error.rs  main.rs  renderer.rs  types.rs
src/parser/: apache.rs  json_lines.rs  mod.rs  nginx.rs  plain_text.rs  syslog.rs
tests/: cli_test.rs  errors_test.rs
