[package]
name = "logx"
version = "0.1.0"
edition = "2024"
description = "Zero-config log investigation CLI tool"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
